FIX: user controller logic