@@ -1,13 +1,16 @@
 package org.univ.dangol.controller;
 
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import org.univ.dangol.dto.UserDto;
 import org.univ.dangol.entity.User;
 import org.univ.dangol.repository.UserRepository;
 
+import java.nio.charset.Charset;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -16,12 +19,13 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class UserController {
     private final UserRepository userRepository;
+    // 아래 해당 구체적인 로직 과정 service로 분리 권장 TO DO
     // UserDto to User Entity
     private User dtoToEntity(UserDto userDto) {
         return User.builder()
                 .id(userDto.getId())
-                .nickName(userDto.getNickName())
-                .age(userDto.getAge())
+                .nickname(userDto.getNickName())
+                .grade(userDto.getGrade())
                 .build();
     }
 
@@ -29,17 +33,23 @@ public class UserController {
     private UserDto entityToDto(User user) {
         return UserDto.builder()
                 .id(user.getId())
-                .nickName(user.getNickName())
-                .age(user.getAge())
+                .nickName(user.getNickname())
+                .grade(user.getGrade())
                 .build();
     }
-
+    // ResponseEntity<?>
     // 모든 사용자 조회
     @GetMapping
-    public List<UserDto> getAllUsers() {
-        return userRepository.findAll().stream()
+    public ResponseEntity<List<UserDto>> getAllUsers() {
+        List<UserDto> dto = userRepository.findAll().stream()
                 .map(this::entityToDto)
-                .collect(Collectors.toList());
+                .toList();
+        HttpHeaders headers = new HttpHeaders();
+        headers.setContentType(new MediaType("application", "json", Charset.forName("UTF-8")));
+
+        return ResponseEntity.ok()
+                .headers(headers)
+                .body(dto);
     }
 
     // 특정 사용자 조회
@@ -63,8 +73,8 @@ public class UserController {
     public ResponseEntity<UserDto> updateUser(@PathVariable Long id, @RequestBody UserDto userDto) {
         return userRepository.findById(id)
                 .map(existingUser -> {
-                    existingUser.setNickName(userDto.getNickName());
-                    existingUser.setAge(userDto.getAge());
+                    existingUser.setNickname(userDto.getNickName());
+                    existingUser.setGrade(userDto.getGrade());
                     userRepository.save(existingUser);
                     return new ResponseEntity<>(entityToDto(existingUser), HttpStatus.OK);
                 })
